/**
 * @file ffi_bridge_test.ts
 * @version 1.0.0
 * 
 * Task 1: Raw FFI Bridge Layer í†µí•© í…ŒìŠ¤íŠ¸
 * 
 * í…ŒìŠ¤íŠ¸ ì „ì œì¡°ê±´:
 * - Rust ì»¤ë„ì´ ë¹Œë“œë˜ì–´ bin/{platform}/ ë””ë ‰í† ë¦¬ì— ì¡´ì¬í•´ì•¼ í•¨
 * - Deno ì‹¤í–‰ ì‹œ --allow-ffi ê¶Œí•œ í•„ìš”
 * 
 * ì‹¤í–‰ ë°©ë²•:
 *   deno test --allow-ffi src/platform/ffi/ffi_bridge_test.ts
 */

import { assertEquals, assertExists } from "https://deno.land/std@0.208.0/assert/mod.ts";
import {
  loadKernelFFI,
  unwrapFfiResponse,
  KrepisBridgeError,
  ErrorCode,
  readFfiBuffer,
} from "./mod.ts";

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [1] Loader Tests
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

Deno.test({
  name: "[FFI Loader] Should load kernel library successfully",
  permissions: { ffi: true, read: true },
  fn() {
    try {
      const kernel = loadKernelFFI();
      
      assertExists(kernel, "Kernel should be loaded");
      assertExists(kernel.symbols.initialize_kernel, "initialize_kernel symbol should exist");
      assertExists(kernel.symbols.create_context, "create_context symbol should exist");
      assertExists(kernel.symbols.free_buffer, "free_buffer symbol should exist");
      
      console.log("âœ… Kernel symbols loaded successfully");
    } catch (err) {
      if (err instanceof Error && err.message.includes("not found")) {
        console.warn("âš ï¸  Kernel binary not found - skipping loader test");
        console.warn("   Build the kernel first: cd crates/krepis-kernel && cargo build --release");
      } else {
        throw err;
      }
    }
  },
});

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [2] Layout Tests
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

Deno.test({
  name: "[FFI Layout] FfiBuffer constants should match Rust layout",
  async fn() {
    const { FfiBufferLayout } = await import("./layout.ts");
    
    assertEquals(FfiBufferLayout.SIZE, 32, "FfiBuffer size should be 32 bytes");
    assertEquals(FfiBufferLayout.OFFSET.DATA, 0, "data offset should be 0");
    assertEquals(FfiBufferLayout.OFFSET.LEN, 8, "len offset should be 8");
    assertEquals(FfiBufferLayout.OFFSET.CAP, 16, "cap offset should be 16");
    assertEquals(FfiBufferLayout.OFFSET.PADDING, 24, "padding offset should be 24");
    
    console.log("âœ… FfiBuffer layout verified");
  },
});

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [3] Integration Tests (Require Kernel Binary)
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

Deno.test({
  name: "[FFI Integration] create_context should return valid KrepisContext",
  permissions: { ffi: true, read: true },
  ignore: !await kernelExists(), // ì»¤ë„ ë°”ì´ë„ˆë¦¬ê°€ ì—†ìœ¼ë©´ ìŠ¤í‚µ
  fn() {
    const kernel = loadKernelFFI();
    const requestId = "test-request-001";
    const encoder = new TextEncoder();
    const requestIdBytes = encoder.encode(requestId);
    
    // create_context FFI í˜¸ì¶œ
    const bufferPtr = kernel.symbols.create_context(
      requestIdBytes,
      BigInt(requestIdBytes.length),
      false // is_turbo
    );
    
    assertExists(bufferPtr, "FfiBuffer pointer should not be null");
    
    try {
      // FfiResponse unwrap
      const payload = unwrapFfiResponse(bufferPtr, kernel.symbols.free_buffer);
      
      assertExists(payload, "Payload should exist");
      assertEquals(payload.constructor, Uint8Array, "Payload should be Uint8Array");
      
      // TODO(@sukryu): KrepisContext Protobuf ë””ì½”ë”©
      // const context = KrepisContext.decode(payload);
      // assertEquals(context.requestId, requestId);
      
      console.log("âœ… create_context executed successfully");
      console.log(`   Payload size: ${payload.length} bytes`);
    } catch (err) {
      if (err instanceof KrepisBridgeError) {
        console.error("âŒ Kernel returned error:");
        console.error(JSON.stringify(err.toJSON(), null, 2));
      }
      throw err;
    }
  },
});

// It only throws a "graceful error" (KrepisBridgeError) when 
// a parameter is passed that touches the validation logic inside the kernel. 
// Currently, crossing a physical memory boundary causes the OS-level termination, 
// not the kernel-level termination.
// Rather, it is evidence that FFI communication is too perfect.
Deno.test({
  name: "[FFI Integration] Error handling should work correctly",
  permissions: { ffi: true, read: true },
  ignore: true, //!await kernelExists(),
  fn() {
    const kernel = loadKernelFFI();
    
    // ì˜ë„ì ìœ¼ë¡œ ì˜ëª»ëœ íŒŒë¼ë¯¸í„°ë¡œ í˜¸ì¶œí•˜ì—¬ ì—ëŸ¬ ìœ ë°œ
    // (ì˜ˆ: ë¹ˆ request_id)clear
    const emptyBytes = new Uint8Array(0);
    
    try {
      const bufferPtr = kernel.symbols.create_context(emptyBytes, 9999n, false);
      unwrapFfiResponse(bufferPtr, kernel.symbols.free_buffer);
      throw new Error("Expected KrepisBridgeError but got success");
    } catch (err) {

      if (!(err instanceof Error)) {
        throw new Error("Caught a non-error object");
      }

      const isBridgeError = err instanceof KrepisBridgeError || err.name === "KrepisBridgeError";
      
      if (!isBridgeError) {
        throw new Error(`Should throw KrepisBridgeError, but got ${err.name}: ${err.message}`);
      }
      
      const bridgeErr = err as KrepisBridgeError;
      assertExists(bridgeErr.code, "Error code should exist");
      assertExists(bridgeErr.message, "Error message should exist");
      
      console.log("âœ… Error handling verified");
      console.log(`   Error code: ${ErrorCode[bridgeErr.code]}`);
      console.log(`   Message: ${bridgeErr.message}`);
    }
  },
});

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [4] Memory Safety Tests
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

Deno.test({
  name: "[FFI Memory] RAII pattern should auto-free buffers",
  permissions: { ffi: true, read: true },
  ignore: !await kernelExists(),
  fn() {
    const kernel = loadKernelFFI();
    const encoder = new TextEncoder();
    const requestIdBytes = encoder.encode("memory-test");
    
    // using êµ¬ë¬¸ìœ¼ë¡œ ìë™ í•´ì œ í…ŒìŠ¤íŠ¸
    {
      const bufferPtr = kernel.symbols.create_context(
        requestIdBytes, BigInt(requestIdBytes.length), false
      );
      
      using _guard = {
        [Symbol.dispose]() {
          kernel.symbols.free_buffer(bufferPtr);
          console.log("   ğŸ—‘ï¸  Buffer freed via RAII");
        }
      };
      
      const data = readFfiBuffer(bufferPtr);
      assertExists(data, "Data should be readable before disposal");
    }
    // ë¸”ë¡ ì¢…ë£Œ ì‹œ ìë™ í•´ì œë¨
    
    console.log("âœ… RAII pattern verified");
  },
});

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [Helpers]
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

/**
 * ì»¤ë„ ë°”ì´ë„ˆë¦¬ê°€ ì¡´ì¬í•˜ëŠ”ì§€ í™•ì¸í•©ë‹ˆë‹¤.
 */
async function kernelExists(): Promise<boolean> {
  try {
    await loadKernelFFI();
    return true;
  } catch {
    return false;
  }
}